src/objects/DD_Service_Taxonomy__c.object
<CustomObject>
    <fields>
        <fullName>DD_Adoption_Status__c</fullName>
        <label>Adoption/FosterCare/Neither/Both</label>
        <picklist>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Contract_Details__c</fullName>
        <label>Contracted/Non-Contracted/Both</label>
        <picklist>
            <picklistValues>
                <fullName>Contracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Contracted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Conv_Residential_Status__c</fullName>
        <label>Conv-Residential/Nonresidential</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DD_Conversion_Divisions__c</fullName>
        <label>Conversion Divisions</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFS+DMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFS+DMSS+DYRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFS+DPBHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFS+DPBHS+DYRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFS+DYRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPBHS: DPBHS+DYRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYRS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DD_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPBHS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DD_Foster_Care_Setting_Type__c</fullName>
        <label>Foster Care Setting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juvenile Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Health_Procedure_Codes__c</fullName>
        <label>Health Procedure Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Level_1_Code__c</fullName>
        <label>Level 1 Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Level_1__c</fullName>
        <label>Level 1 : Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Level_2_Code__c</fullName>
        <label>Level 2 Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Level_2__c</fullName>
        <label>Level 2 : Services</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Level_3_Code__c</fullName>
        <label>Level 3 Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Level_3__c</fullName>
        <label>Level 3 : SubServices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_MA_Service__c</fullName>
        <label>MA Fee for Service</label>
        <picklist>
            <picklistValues>
                <fullName>Fee For Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Paid_Status__c</fullName>
        <label>Paid/Non-Paid/Both</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-paid</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Reimbursable_Payment__c</fullName>
        <label>IV-E Reimbursable Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Residential_Status__c</fullName>
        <label>Residential/Nonresidential</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DD_Service_Status__c</fullName>
        <label>Service Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Taxonomy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Service Taxonomy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Taxonomy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>